--- a/pom.xml
+++ b/pom.xml
@@ -24,8 +24,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.0</version>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>1.8</source>
+					<target>1.8</target>
 					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
@@ -114,8 +114,9 @@
 		<dependency>
 			<groupId>org.black_ixx</groupId>
 			<artifactId>PlayerPoints</artifactId>
-			<version>2.1.3</version>
-			<scope>provided</scope>
+			<version>2.1.4</version>
+			<systemPath>${basedir}/lib/PlayerPoints.jar</systemPath>
+			<scope>system</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.gamingmesh.jobs</groupId>
@@ -141,7 +142,7 @@
 		<dependency>
 			<groupId>me.realized.tm</groupId>
 			<artifactId>Core</artifactId>
-			<version>2.0.8</version>
+			<version>3.2.3</version>
 			<systemPath>${basedir}/lib/TokenManager.jar</systemPath>
 			<scope>system</scope>
 		</dependency>
@@ -155,7 +156,7 @@
 		<dependency>
 			<groupId>com.enjin</groupId>
 			<artifactId>EnjinMinecraftPlugin</artifactId>
-			<version>3.0.10</version>
+			<version>3.5.6</version>
 			<systemPath>${basedir}/lib/EnjinMinecraftPlugin.jar</systemPath>
 			<scope>system</scope>
 		</dependency>
@@ -211,7 +212,7 @@
 		<dependency>
 			<groupId>com.songoda.epicspawners</groupId>
 			<artifactId>EpicSpawners</artifactId>
-			<version>3.1.6</version>
+			<version>6-Pre-release-10</version>
 			<systemPath>${basedir}/lib/EpicSpawners.jar</systemPath>
 			<scope>system</scope>
 		</dependency>
