--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.black_ixx</groupId>
 	<artifactId>BossShopPro</artifactId>
-	<version>2.0.4</version>
+	<version>2.0.6</version>
 	<name>BossShopPro</name>
 	<description>Create virtual chest shops</description>
 	<build>
@@ -168,8 +168,9 @@
 		<dependency>
 			<groupId>com.vk2gpz.tokenenchant</groupId>
 			<artifactId>TokenEnchantAPI</artifactId>
-			<version>10.0.0</version>
-			<scope>provided</scope>
+			<version>8.0.0</version>
+			<systemPath>${basedir}/lib/TokenEnchantAPI.jar</systemPath>
+			<scope>system</scope>
 		</dependency>
 
 		<!-- Adds coins support -->
