Update VotingPlugin hook

--- a/pom.xml
+++ b/pom.xml
@@ -141,7 +141,7 @@
 
 		<!-- Adds voting plugin support -->
 		<dependency>
-			<groupId>com.github.Ben12345rocks</groupId>
+			<groupId>com.github.BenCodez</groupId>
 			<artifactId>VotingPlugin</artifactId>
 			<version>LATEST</version>
 			<scope>provided</scope>
